--- a/src/app/raceType1/addRunnerDialog/addDialog.html
+++ b/src/app/raceType1/addRunnerDialog/addDialog.html
@@ -1,6 +1,7 @@
 <h1 mat-dialog-title>Add runner</h1>
 <div mat-dialog-content>
-  <p>Add Runner</p>
+  <p *ngIf="!errMessage">Entry</p>
+  <p class="warn" *ngIf="errMessage">{{errMessage}}</p>
   <mat-form-field>
     <mat-label>Name</mat-label>
     <input matInput [(ngModel)]="data.name" />
@@ -18,6 +19,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="addClick()" cdkFocusInitial>Ok</button>
 </div> 
 
