--- a/src/app/raceType1/race-type1.css
+++ b/src/app/raceType1/race-type1.css
@@ -1,36 +1,26 @@
+
+mat-expansion-panel.mat-expansion-panel.header {
+  position: fixed;
+  top: 64px;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
+  max-height:65vh;
+  overflow:scroll;
+}
+
+@media (max-width: 599px){
+  mat-expansion-panel.mat-expansion-panel.header {
+      top: 56px;
+  }
+}
+
 .button-add {
   color:white;
   cursor:pointer;
   background-color:green;
 }
-
-.example-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: white;
-    font-size: 14px;
-}
-
-.example-list {
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: white;
-    border-radius: 4px;
-    display: block;
-}
-
-mat-grid-tile {
-  background: lightblue;
-  overflow: scroll;
-}
-
 
 .cdk-drag-preview {
   box-sizing: border-box;
@@ -48,13 +38,6 @@ mat-grid-tile {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
 table thead th {
   background-color:rgb(220, 220, 220)
 }
@@ -67,7 +50,7 @@ table#tblResult tbody tr, table#tblInfo tbody tr {
   cursor:pointer;
 }
 
-table#tblResult, table#tblInfo {
+table#tblResult {
   width:92%;
   margin:0 auto;
 }
