--- a/src/app/raceType1/race-type1.html
+++ b/src/app/raceType1/race-type1.html
@@ -1,54 +1,64 @@
+
+<mat-expansion-panel class="header">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Team Results
+    </mat-panel-title>
+    <mat-panel-description>
+      This is a summary of the content This is a summary of the content This is a summary of the contentj
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+  <div class="btn-container">
+    <br />
+    <button mat-raised-button color="primary" [disabled]="!resultsModified" (click)="undoChanges()">
+      Undo Result Changes
+    </button>
+    <button mat-raised-button color="info" [disabled]="!raceLogic.hasGroupings" (click)="undoGroupings()">
+      Undo Groupings
+    </button>
+  </div>
+  <br />
+  <div class="container"> 
+    <table id="tblInfo" class="mat-elevation-z8">
+      <thead>
+        <tr>
+          <th>PL</th>
+          <th>TEAM</th>
+          <th>Total Time</th>
+          <th>Avg. Time</th>
+          <th>Spread</th>
+          <th>Score</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let key of scoringKeys; let i = index" (click)="showGroupingModal(key)">
+          <td>
+            {{i+1}}
+          </td>
+          <td>
+            {{key}}
+          </td>
+          <td>
+            {{formatingUtil.formatTime(raceInfo[key].totalTime)}}
+          </td>
+          <td>
+            {{formatingUtil.formatTime(raceInfo[key].average,true)}}
+          </td>
+          <td>
+            {{formatingUtil.formatTime(raceInfo[key].spread,true)}}
+          </td>
+          <td>
+            {{raceInfo[key].score}}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</mat-expansion-panel>
 <div class="center">
   <h1>Because I wanted to send something to space</h1>
 </div>
 <br />
-<div class="btn-container">
-  <br />
-  <button mat-raised-button color="primary" [disabled]="!resultsModified" (click)="undoChanges()">
-    Undo Result Changes
-  </button>
-  <button mat-raised-button color="info" [disabled]="!raceLogic.hasGroupings" (click)="undoGroupings()">
-    Undo Groupings
-  </button>
-</div>
-<br />
-<div class="container"> 
-  <table id="tblInfo" class="mat-elevation-z8">
-    <thead>
-      <tr>
-        <th>PL</th>
-        <th>TEAM</th>
-        <th>Total Time</th>
-        <th>Avg. Time</th>
-        <th>Spread</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let key of scoringKeys; let i = index" (click)="showGroupingModal(key)">
-        <td>
-          {{i+1}}
-        </td>
-        <td>
-          {{key}}
-        </td>
-        <td>
-          {{formatingUtil.formatTime(raceInfo[key].totalTime)}}
-        </td>
-        <td>
-          {{formatingUtil.formatTime(raceInfo[key].average,true)}}
-        </td>
-        <td>
-          {{formatingUtil.formatTime(raceInfo[key].spread,true)}}
-        </td>
-        <td>
-          {{raceInfo[key].score}}
-        </td>
-      </tr>
-
-    </tbody>
-  </table>
-</div>
 <!-- <div *ngFor="let key of scoringKeys">
   {{key}}:<b>{{raceInfo[key].score}}</b>
 </div> -->
