--- a/src/app/raceType1/race-type1.html
+++ b/src/app/raceType1/race-type1.html
@@ -4,7 +4,7 @@
     <mat-panel-title>
       Team Results
     </mat-panel-title>
-    <mat-panel-description>
+    <mat-panel-description class="no-wrap">
       <span *ngIf="!headerInfoExpanded">{{buildDesc()}}</span>
     </mat-panel-description>
   </mat-expansion-panel-header>
