--- a/src/app/raceType1/race-type1.html
+++ b/src/app/raceType1/race-type1.html
@@ -64,7 +64,7 @@
 <br />
 <br />
 <br />
-<div cdkDropList (cdkDropListDropped)="dropLogic.drop(this,$event)" class="container">
+<div (click)="headerInfoExpanded = false;" cdkDropList (cdkDropListDropped)="dropLogic.drop(this,$event)" class="container">
   <table id="tblResult" class="mat-elevation-z8">
     <thead>
       <tr>
