--- a/src/app/raceType1/addRunnerDialog/addDialog.html
+++ b/src/app/raceType1/addRunnerDialog/addDialog.html
@@ -4,7 +4,7 @@
   <p class="warn" *ngIf="errMessage">{{errMessage}}</p>
   <mat-form-field>
     <mat-label>Name</mat-label>
-    <input matInput [(ngModel)]="data.name" />
+    <input cdkFocusInitial matInput [(ngModel)]="data.name" />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Team</mat-label>
@@ -19,6 +19,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button (click)="addClick()" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="addClick()">Ok</button>
 </div> 
 
