--- a/src/app/raceType1/race-type1.css
+++ b/src/app/raceType1/race-type1.css
@@ -1,4 +1,8 @@
 
+.content {
+  margin-top:90px;
+}
+
 mat-expansion-panel.mat-expansion-panel.header {
   position: fixed;
   top: 64px;
@@ -7,7 +11,10 @@ mat-expansion-panel.mat-expansion-panel.header {
   z-index: 10;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
   max-height:65vh;
-  overflow:scroll;
+}
+
+mat-expansion-panel.mat-expansion-panel.header.mat-expanded {
+    overflow-y:auto;
 }
 
 @media (max-width: 599px){
