--- a/src/app/raceType1/race-type1.html
+++ b/src/app/raceType1/race-type1.html
@@ -58,34 +58,36 @@
     </table>
   </div>
 </mat-expansion-panel>
-<div class="center">
-  <h1>Because I wanted to send something to space</h1>
+<div class="content">
+  <br />
+  <div class="center">
+    <h1>Title Name</h1>
+  </div>
+  <br />
+  <div (click)="headerInfoExpanded = false;" cdkDropList (cdkDropListDropped)="dropLogic.drop(this,$event)" class="container">
+    <table id="tblResult" class="mat-elevation-z8">
+      <thead>
+        <tr>
+          <th *ngFor="let key of resultKeys">
+            {{key}}
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- matTooltip behaves a little different on mobile -->
+        <tr matTooltip="Drag to simulate results" matTooltipShowDelay="1000"
+          matTooltipHideDelay="300" *ngFor="let result of results;let i = index" cdkDrag 
+          (cdkDragStarted)="closeHeaderInfo()" 
+          (click)="showModifyModal(i)" > 
+          <td *ngFor="let key of resultKeys">
+            {{result[key]}}
+            <span *ngIf="key === 'TEAM' && raceLogic.groupingData[result[key]]">
+              ({{raceLogic.groupingData[result[key]]}})
+            </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <br />
-<br />
-<br />
-<div (click)="headerInfoExpanded = false;" cdkDropList (cdkDropListDropped)="dropLogic.drop(this,$event)" class="container">
-  <table id="tblResult" class="mat-elevation-z8">
-    <thead>
-      <tr>
-        <th *ngFor="let key of resultKeys">
-          {{key}}
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- matTooltip behaves a little different on mobile -->
-      <tr matTooltip="Drag to simulate results" matTooltipShowDelay="1000"
-        matTooltipHideDelay="300" *ngFor="let result of results;let i = index" cdkDrag 
-        (cdkDragStarted)="closeHeaderInfo()" 
-        (click)="showModifyModal(i)" > 
-        <td *ngFor="let key of resultKeys">
-          {{result[key]}}
-          <span *ngIf="key === 'TEAM' && raceLogic.groupingData[result[key]]">
-            ({{raceLogic.groupingData[result[key]]}})
-          </span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
