--- a/src/app/main/main.css
+++ b/src/app/main/main.css
@@ -7,6 +7,9 @@ mat-toolbar.mat-toolbar {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
 }
 
+.pointer {
+  cursor:pointer;
+}
 
 .content {
   margin-top:90px;
