--- a/src/app/raceType1/race-type1.html
+++ b/src/app/raceType1/race-type1.html
@@ -61,7 +61,7 @@
 <div class="content">
   <br />
   <div class="center">
-    <h1>Title Name</h1>
+    <h1>{{title}}</h1>
   </div>
   <br />
   <div (click)="headerInfoExpanded = false;" cdkDropList (cdkDropListDropped)="dropLogic.drop(this,$event)" class="container">
